Got rid of some DRY code.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-        "webdriver_filepath": "WRITE_HERE",
-        "email": "",
-        "pwd": ""
+        "webdriver_filepath": "C:\\Users\\sebas\\Documents\\chromedriver.exe",
+        "email": "sebastiangrundet@manbearpig.com",
+        "pwd": "syh47nbj"
 }
